fix input stretching out of container (#38)

--- a/stencil-lib/src/components/inputs/input/input.scss
+++ b/stencil-lib/src/components/inputs/input/input.scss
@@ -51,7 +51,7 @@
     border-color: var(--cpy-bg-basic-border);
 
     input {
-      @apply flex-1 bg-transparent leading-6;
+      @apply flex-1 min-w-0 bg-transparent leading-6;
     }
 
     /* Chrome, Safari, Edge, Opera */
